# turbot

tb3/: CMakeLists.txt  package.xml
tb3/launch/: simulation(new).launch  simulation.launch
tb3/model/miro_model/: miro_model.sdf  model.config
tb3/model/miro_model/components/miro_body/: miro_body.sdf  model.config
tb3/model/miro_model/components/miro_gmbl/: miro_gmbl.sdf  model.config
tb3/model/miro_model/components/miro_head/: miro_head.sdf  model.config
tb3/model/miro_model/components/miro_neck/: miro_neck.sdf  model.config
tb3/model/miro_model/components/miro_tail/: miro_tail.sdf  model.config
tb3/model/urdf/car/: calibration.xacro  car.gazebo.xacro  car.urdf.xacro
tb3/model/urdf/car/replica/car/: car1.gazebo  car1.xacro  car2.gazebo  car2.xacro  car3.gazebo  car3.xacro  car4.gazebo  car4.xacro  car5.gazebo  car5.xacro  car6.gazebo  car6.xacro  car7.gazebo  car7.xacro  car8.gazebo  car8.xacro
tb3/model/urdf/car/replica/uav/: uav1.xacro  uav2.xacro
tb3/model/urdf/sensor/camera/: camera.xacro
tb3/model/urdf/sensor/kinect/: kinect.gazebo.xacro  kinect.urdf.xacro
tb3/model/urdf/sensor/zed/: zed.urdf.xacro
tb3/model/urdf/waffle/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
tb3/model/urdf/waffle-pacman/: common_properties.xacro  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
tb3/scripts/: apf.py  dwa.py  misc.py  simulation.py  simulation4apf.py  simulation4dwa.py  simulation4pid.py  turtlebot.py
tb3/scripts/models/gazebo/goal_sign/: model.sdf
tb3/world/: maze1.world
